TGUI 0.7.7  (TBD)
-----------------

- Fixed EditBox InputValidator in textEntered when text was selected
- Hover image of EditBox wasn't being used in Black theme
- Loading widgets from theme was partially broken on android
- ChatBox::setScrollbar didn't correctly position the scrollbar
- ChildWindow::setTitleButtons didn't set the button positions


TGUI 0.7.6  (25 November 2017)
------------------------------

- Fixed _fullpath function not found in some MinGW versions
- Knob did not display correctly when using textures
- Fixed crash in layouts in specific case with GCC 7
- ChildWindow::setTitleButtons did not accept combinations of buttons
- Theme files missed MinimizeButton and MaximizeButton in ChildWindow section
- ComboBox::setItemsToDisplay did not show full list when 0 was passed
- Non-string layouts are now also copied when copying a widget
- OpenGL is no longer used for clipping
- Fixed crash that could occur when performing a division by 0 in the layouts


TGUI 0.7.5  (11 September 2017)
-------------------------------

- Added closeMenu function to MenuBar
- System clipboard is now used on all platforms when using SFML >= 2.5
- Fixed FindTGUI.cmake script when patch version is not specified
- Label didn't send a SizeChanged signal when its text changed
- The size of a Grid was reset in removeAllWidgets
- Holding shift and pressing arrow keys will select text in EditBox
- Fixed syntax error in BabyBlue and TransparentGrey themes
- Resource path was not correctly used for all resources
- Picture::create did not store the filename used


TGUI 0.7.4  (3 April 2017)
--------------------------

- Theme and widget file parser now provides line number on error
- Scrollbar in ListBox remained in hover state until mouse left the ListBox
- The position of TextBox could be wrong when using layouts
- Fixed incorrect clipping when the viewport was changed
- Optional parameter from Checked/Unchecked signal could have been wrong


TGUI 0.7.3  (9 February 2017)